fix notempty test